# pdnsd

./: .cvsignore  .gitignore  AUTHORS  COPYING.BSD  ChangeLog  ChangeLog.old  HACKING  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  PKGBUILD  PKGBUILD.in  README  README.par  THANKS  TODO  a-conf.sh  acconfig.h  aclocal.m4  cache.c  cache.h  conf.l.templ  conf.y  conff.c  conff.h  config.h  config.h.in  config.h.templ  configure  configure.in  consts.h  dns.c  dns.h  dns_answer.c  dns_answer.h  dns_query.c  dns_query.h  error.c  (+25 more)
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
contrib/: Makefile.am  Makefile.in  README  change_ip.pl  change_pdnsd_server_ip.pl  pdnsd_dhcp.pl  save_ram.pl
doc/: .cvsignore  Makefile.am  Makefile.in  html2confman.pl  pdnsd-ctl.8  pdnsd.8.in  pdnsd.conf  pdnsd.conf.5.in  pdnsd.conf.in
doc/html/: .cvsignore  dl.html  dl.html.in  doc.html  doc_makefile  faq.html  htmlsubst.pl  index.html
doc/txt/: .cvsignore  doc_makefile  faq.txt  intro.txt  manual.txt
src/: .cvsignore  Makefile.am  Makefile.in  cache.c  cache.h  conf-keywords.h  conf-lex.c  conf-lex.l  conf-lex.l.in  conf-parse.c  conf-parse.h  conf-parse.y  conf-parser.c  conf-parser.h  conff.c  conff.h  consts.c  consts.h  debug.c  debug.h  dns.c  dns.h  dns_answer.c  dns_answer.h  dns_query.c  dns_query.h  error.c  error.h  hash.c  hash.h  helpers.c  helpers.h  icmp.c  icmp.h  ipvers.h  list.c  list.h  main.c  make_hashconvtable.c  make_rr_types_h.pl  (+14 more)
src/cacheing/: Makefile.am  cache.h
src/cacheing/gdbm/: Makefile.am
src/cacheing/native/: Makefile.am  cache.c  hash.c  hash.h
src/pdnsd-ctl/: .cvsignore  Makefile.am  Makefile.in  pdnsd-ctl  pdnsd-ctl.c
src/rc/: Makefile.am  Makefile.in  README
src/rc/ArchLinux/: Makefile.am  Makefile.in
src/rc/Debian/: Makefile.am  Makefile.in  pdnsd  pdnsd.in
src/rc/RedHat/: .cvsignore  Makefile.am  Makefile.in  pdnsd  pdnsd.in
src/rc/Slackware/: Makefile.am  Makefile.in  rc.pdnsd.in
src/rc/SuSE/: Makefile.am  Makefile.in  pdnsd  pdnsd.in
src/test/: .cvsignore  Makefile.am  Makefile.in  clnt-test.sh  if_up.c  is_local_addr.c  random.c  srv-test.sh  test.sh  tping.c
